create api soft delete user by superadmin
