# src/router/UserRoute.js
@@ -2,6 +2,7 @@ const {
   getAllUsers,
   GetUserById,
   createUser,
+  deleteUser
 } = require("../controllers/UserController");
 const express = require("express");
 const auth = require("../middlewares/authorization");
@@ -18,6 +19,12 @@ router.get(
 );
 router.get("/api/user/detail", auth.parseToken, GetUserById);
 router.post("/api/user/create", validation(createUserValidation),createUser);
+router.delete(
+  "/api/user/delete/:id", 
+  auth.parseToken, 
+  auth.checkRole(["ROLE_SUPERUSER"]),
+  deleteUser
+);
 
 // router.get("/api/users/", getAllUsers);
 // router.get("/api/user/detail", GetUserById);
